--- a/mapnavlib/mapweb/mapmove.html
+++ b/mapnavlib/mapweb/mapmove.html
@@ -23,6 +23,6 @@
   
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="./load_folium.js"></script>
-    <!-- <script src="./maps_controller.js"></script> -->
+    <script src="./maps_controller.js"></script>
 
 </html>
